--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6171,7 +6171,7 @@ figure {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgb(0 0 0) 0%, rgba(0, 0, 0, 0.3) 20%, transparent 30%, transparent 70%, rgba(0, 0, 0, 0.3) 80%, rgba(0, 0, 0, 0.7) 100%);
+    background: linear-gradient(to bottom, rgb(0 0 0) 0%, rgba(0, 0, 0, 0.3) 20%, transparent 30%, transparent 70%, rgba(0, 0, 0, 0.3) 80%, rgb(0 0 0 / 0%) 100%);
     pointer-events: none; 
     z-index: 1;
 }
